force-app/main/default/objects/Mars_Photo__c/Mars_Photo__c.object-meta.xml
<CustomObject>
    <label>Mars Photo</label>
    <nameField>
        <label>Mars Photo Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mars Photos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>