force-app/main/default/objects/Mars_Photo__c/fields/Earth_date__c.field-meta.xml
<CustomField>
    <fullName>Earth_date__c</fullName>
    <label>Earth date</label>
    <type>Date</type>
</CustomField>