force-app/main/default/objects/Mars_Photo__c/fields/Rover__c.field-meta.xml
<CustomField>
    <fullName>Rover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rover Asociado</description>
    <label>Rover asociado</label>
    <referenceTo>Rover__c</referenceTo>
    <relationshipLabel>Mars Photos</relationshipLabel>
    <relationshipName>Mars_Photos</relationshipName>
    <type>Lookup</type>
</CustomField>