force-app/main/default/objects/Mars_Photo__c/fields/sol__c.field-meta.xml
<CustomField>
    <fullName>sol__c</fullName>
    <label>sol</label>
    <length>30</length>
    <type>Text</type>
</CustomField>