force-app/main/default/objects/Mars_Photo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Earth_date__c</columns>
    <columns>sol__c</columns>
    <columns>Rover__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>